monitoring/grafana-stack/grafana/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: f6bc3f-tools
  labels:
    app.kubernetes.io/name: grafana
spec:
  host: grafana-f6bc3f-tools.apps.silver.devops.gov.bc.ca
  port:
    targetPort: service
  to:
    kind: Service
    name: grafana
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
